--- a/流程控制.md
+++ b/流程控制.md
@@ -5,8 +5,6 @@
 ##条款
 1. 各种结构的条件，使用方括号`[ ]`包裹，并且紧挨着两侧括号各有一个空格。
 
-><b>吐槽</b><br>
-个人感觉，bash的设计者和python的设计者都是重度的强迫症患者，对于编程语言书写的美观程度有着近乎病态的偏执。突出一点，就是bash中的空格，和python中的缩进。
 
 #顺序语句
 最普通的情况就是顺序执行了，一行一行的。没什么可说的。
@@ -17,6 +15,35 @@
 ##反斜杠
 这里的反斜杠，我不是指的输出的时候进行转义作用的反斜杠。而是在编程的时候如果一行写不下，可以在不引起起义的情况下，加上一个反斜杠。这样上下两行就合成了一条语句。
 
+#test语句
+##整数
+整数之间的测试就是两个整数间的关系运算。
+bash与其他语言不同，关系运算没有使用大于号*>*，小于号*<*,等于号==。
+主要是因为大于小于号具有重定向的意义，故不能再用来比较大小。
+
+共有六种：
+
+| 运算符 |  描述  |英文全称
+|:------:|:------:|:------:
+|-eq     |等于    |**equal**
+| -gt    |大于    |**greater than**
+|-lt     |小于    |**less than**
+| -ne    |不等于  |**not equal**
+| -ge    |大于等于|**greater or equal**
+| -le    |小于等于|**less or equal**
+##字符串
+##文件
+|选项|描述|
+|:--:|----|
+|d|是否为目录|
+|f|是否为普通文件|
+|x|是否有执行权限|
+|r|是否有读权限|
+|w|是否写读权限|
+|e|是否存在|
+|s|大小是否为0|
+|c|是否为字符设备文件|
+|b|是否为块设备文件|
 #分支语句
 >>Bash中，独具特色的是，分支语句的块作用域，大量使用了`反语`。这里的反语，不是指的反义词，而是指的单词字面上的反转。
 
