--- a/流程控制.md
+++ b/流程控制.md
@@ -23,7 +23,7 @@ bash与其他语言不同，关系运算没有使用大于号*>*，小于号*<*,
 
 共有六种：
 
-| 运算符 |  描述  |英文全称
+| 选项 |  描述  |英文全称
 |:------:|:------:|:------:
 |-eq     |等于    |**equal**
 | -gt    |大于    |**greater than**
@@ -32,6 +32,13 @@ bash与其他语言不同，关系运算没有使用大于号*>*，小于号*<*,
 | -ge    |大于等于|**greater or equal**
 | -le    |小于等于|**less or equal**
 ##字符串
+|用法|描述|
+|:--:|----|
+|test str1 = str2|测试是否相等|
+|test str1 != str2|测试是否不等|
+|test str1|如果不为空返回1|
+|test -n str1|如果不为空返回1|
+|test -z str1|如果是空串，返回1|
 ##文件
 |选项|描述|
 |:--:|----|
@@ -44,6 +51,10 @@ bash与其他语言不同，关系运算没有使用大于号*>*，小于号*<*,
 |s|大小是否为0|
 |c|是否为字符设备文件|
 |b|是否为块设备文件|
+##逻辑操作
+* -a 逻辑与
+* -o 逻辑或
+
 #分支语句
 >>Bash中，独具特色的是，分支语句的块作用域，大量使用了`反语`。这里的反语，不是指的反义词，而是指的单词字面上的反转。
 
