--- a/流程控制.md
+++ b/流程控制.md
@@ -36,6 +36,8 @@ bash与其他语言不同，关系运算没有使用大于号*>*，小于号*<*,
 |:--:|----|
 |test str1 = str2|测试是否相等|
 |test str1 != str2|测试是否不等|
+|test str1 \< str2|字典序str1是否在str2之后|
+|test str1 \> str2|字典序str1是否在str2之前|
 |test str1|如果不为空返回1|
 |test -n str1|如果不为空返回1|
 |test -z str1|如果是空串，返回1|
@@ -54,6 +56,7 @@ bash与其他语言不同，关系运算没有使用大于号*>*，小于号*<*,
 ##逻辑操作
 * -a 逻辑与
 * -o 逻辑或
+* !  逻辑非
 
 #分支语句
 >>Bash中，独具特色的是，分支语句的块作用域，大量使用了`反语`。这里的反语，不是指的反义词，而是指的单词字面上的反转。
