--- a/流程控制.md
+++ b/流程控制.md
@@ -36,8 +36,8 @@ bash与其他语言不同，关系运算没有使用大于号*>*，小于号*<*,
 |:--:|----|
 |test str1 = str2|测试是否相等|
 |test str1 != str2|测试是否不等|
-|test str1 \< str2|字典序str1是否在str2之后|
-|test str1 \> str2|字典序str1是否在str2之前|
+|test str1 \\< str2|字典序str1是否在str2之后|
+|test str1 \\> str2|字典序str1是否在str2之前|
 |test str1|如果不为空返回1|
 |test -n str1|如果不为空返回1|
 |test -z str1|如果是空串，返回1|
