--- a/运算.md
+++ b/运算.md
@@ -2,7 +2,7 @@
 ============
 ##数学运算
 bash中的数学运算并不如其他语言般简便，甚至bash本身不支持小数运算(需要额外指令bc)。
--`$[  ]`
+###`$[  ]`
 
 ```bash
 a=2
@@ -12,22 +12,34 @@ d=$[a-b]
 e=$[a*b]
 f=$[a/b]
 ```
-
-- expr \` \`
+操作符左右可加空格。
+### expr \` \`
 利用`expr`命令的反引用
 ```bash
 #!/bin/bash
 a=2
 b=3
-echo `expr $a + $b`
-echo `expr $a - $b`
-echo `expr $a \* $b`
-echo `expr $a / $b`
+expr $a + $b
+expr $a - $b
+expr $a \* $b
+expr $a / $b
+#赋值
+c=`expr $a + $b`
 ```
 >注意乘法运算时不能直接使用`*`，要转义`\*`。因为`*`在正则匹配中是全匹配的意思。
 
-- $(())
-
+### $(())
+```bash
+a=2
+b=3
+echo $(($a+$b))
+echo $(($a-$b))
+echo $(($a*$b))
+echo $(($a/$b))
+#赋值
+c=$(($a/$b))
+```
+这个运算的操作符左右可以有空格
 ##自增自减
 bash中也能实现自增自减，不过没有C语言中那么简便。bash需要借助`let`工具来实现
 ```bash
