--- a/流程控制.md
+++ b/流程控制.md
@@ -72,6 +72,9 @@ fi
 ```
 另外bash中的else if写作`elif`
 >MATLAB中else if写作`elseif`
+###=，==
+可以用=和==来比较字符串是否相同。此时符号两边可以有空格，也可以无空格。  
+但是不能一边有空格，另一边没有空格。
 
 
 ##case语句
