--- a/流程控制.md
+++ b/流程控制.md
@@ -20,7 +20,7 @@
 整数之间的测试就是两个整数间的关系运算。
 bash与其他语言不同，关系运算没有使用大于号*>*，小于号*<*,等于号==。
 主要是因为大于小于号具有重定向的意义，故不能再用来比较大小。
-
+可以用`=`来比较是否相等，但是等号前后一定要有空格，否则就视作一个字符串了。
 共有六种：
 
 | 选项 |  描述  |英文全称
