--- a/循环.md
+++ b/循环.md
@@ -1,8 +1,26 @@
- 循环
- ====
- ##迭代
- ###花括号{}
- 数字迭代{1..100}  
- 字母迭代{a..z},{A..Z},{Z..A}  
- Ascii字符迭代{a..A}
- ###seq
+循环
+====
+##基本格式
+```sh
+for 变量 in 取值列表
+do
+    各种操作
+done
+```
+##枚举
+###普通枚举
+取值列表为空格或回车符分割的字符串
+
+    for i in 'apple' 'banana'
+###配合命令替换
+``和$()。for循环中很常见。
+##迭代
+###花括号{}
+数字迭代{1..100}  
+字母迭代{a..z},{A..Z},{Z..A}  
+Ascii字符迭代{a..A}
+###seq
+需要配合命令替换使用。seq命令的格式为：  
+
+    seq 首数 [增量] 末数
+
