--- a/字符串操作.md
+++ b/字符串操作.md
@@ -7,6 +7,15 @@ len2=${#str2}
 ```
 
 ##变量替换
+依据有冒号和无冒号我将其分为两大类：
+
+|无冒号|有冒号|
+|:---:|:-----:
+|+|:+
+|-|:-
+|=|:=
+|?|:?
+
 ```
 jelly@X:~$ echo ${aaa:-$PWD}
 /home/jelly
