--- a/函数.md
+++ b/函数.md
@@ -15,7 +15,7 @@ name=jelly&age=20&location=shenzhen
 ```
 ```sh
 function getParam() {
-    key=$1
+    local key=$1
     awk -F'&' '{for(i=1;i<=NF;i++){print $i;}}' ./kv.txt|awk -F'=' -v key=$key '{if ($1==key){print $2}}'
 }
 ```
@@ -26,3 +26,7 @@ getParam 'name'
 getParam name
 ```
 调用函数的时候，不像其他语言那样使用括号。其参数为 $1,$2,$3,$4,
+
+# local
+函数内的变量用local
+不然这个变量会超越函数，在整个脚本周期内有用
