--- a/变量.md
+++ b/变量.md
@@ -16,3 +16,9 @@ bash中变量无需声明
 currentFolder=`pwd`
 currentFolder=$(pwd)
 ```
+### 二选一
+```
+local date=${1:-`date -d "1 day ago" +%Y%m%d`}
+```
+如果$1存在且不为空，date就是$1
+如果$1不存在或为空，那么date就是昨天的日期
