--- a/变量.md
+++ b/变量.md
@@ -17,7 +17,7 @@ currentFolder=`pwd`
 currentFolder=$(pwd)
 ```
 ### 二选一
-```
+```shell
 local date=${1:-`date -d "1 day ago" +%Y%m%d`}
 ```
 如果$1存在且不为空，date就是$1
