--- a/变量.md
+++ b/变量.md
@@ -12,7 +12,7 @@ bash中变量无需声明
 1. \` \`被称作`back-quote`反引用
 2. $(  )被称作`subshell`子shell
 比如用当前路径来初始化变量:
-```
+```shell
 currentFolder=`pwd`
 currentFolder=$(pwd)
 ```
